# Nationwider-cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
idmaps/: 1_biomes.txt  2_anialag.txt
ids/: 1_galaina.txt
imgui/: main.cpp
